--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
      -->
 
 
-
+    <!-- 
+    ~~~~~~~~~~~~ Star Main ~~~~~~~~~~~ 
+     -->
     <main>
       <!-- Formation column-->
       <div>
@@ -104,6 +106,7 @@
               <p>●●○○○</p>
             </ul>
         </section>
+        <!--Languages columns-->
         <section>
           <h2>LANGUES</h2>
             <ul>
@@ -113,6 +116,7 @@
               <p>●●●○○</p>
             </ul>
         </section>
+        <!--Hobbies columns-->
         <section>
           <h2>CENTRE D'INTERET</h2>
             <ul>
@@ -126,8 +130,14 @@
         </section>
       </div>
     </main>
+    <!-- 
+    ~~~~~~~~~~~~ End Main ~~~~~~~~~~~ 
+    -->
 
 
+    <!-- 
+    ~~~~~~~~~~~~ Star Footer ~~~~~~~~~~~ 
+    -->
     <footer>
       <section>
          <h3>CONTACT</h3>
@@ -142,6 +152,11 @@
             </div>
       </section>
     </footer>
+    <!-- 
+    ~~~~~~~~~~~~ End Footer ~~~~~~~~~~~ 
+    -->
+
+
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
